# SysMonPy

./: docker-compose.yml  pyproject.toml  readme.md  run.bat  up.bat
API/: Dockerfile  api.bat  api.py  pyproject.toml
DataCollection/: Dockerfile  collector.py  data.bat  pyproject.toml
Renderer/: Dockerfile  pyproject.toml  renderer.bat  renderer.py
