[tool.poetry]
name = "sysmonpy"
version = "0.1.0"
description = "system monitor in python"
authors = ["CPKCShanKonduru <CPKCShanKonduru@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
