[tool.poetry]
name = "api"
version = "0.1.0"
description = "API to store data"
authors = ["CPKCShanKonduru <CPKCShanKonduru@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.3"
Flask-SQLAlchemy = "^3.1.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
