[tool.poetry]
name = "datacollection"
version = "0.1.0"
description = "data collection"
authors = ["CPKCShanKonduru <CPKCShanKonduru@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
psutil = "^6.0.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
